<resources>
    <string name="app_name">Tugas Mobile</string>
    <string name="pen">Pendaftaran</string>
    <string name="np">Nama Depan</string>
    <string name="nb">Nama Belakang</string>
    <string name="tl">Tempat Lahir</string>
    <string name="tal">Tanggal Lahir</string>
    <string name="al">Alamat</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="l">Laki-Laki</string>
    <string name="p">Perempuan</string>
    <string name="ag">Agama</string>
    <string name="pa">PilihanAgama1</string>
    <string name="pa2">PilihanAgama2</string>
    <string name="i">Islam</string>
    <string name="ka">Katolik</string>
    <string name="kr">Kristen</string>
    <string name="bu">Buddha</string>
    <string name="hi">Hindu</string>
    <string name="ko">Konghucu</string>
    <string name="ak">Aliran Kepercayaan</string>
    <string name="telp">Telepon</string>
    <string name="em">Email</string>
    <string name="pass">Password</string>
    <string name="pass2">Masukkan Password</string>
    <string name="btnK">KEMBALI</string>
    <string name="btnD">DAFTAR</string>
</resources>
