<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:background="@color/btn"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/Pen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PENDAFTARAN"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:textColor="@color/label"
                android:textSize="35sp"
                android:textStyle="bold|italic" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editnp"
                        android:layout_width="165dp"
                        android:layout_height="51dp"

                        android:ems="10"
                        android:hint="@string/np"
                        android:inputType="textPersonName" />
                    <EditText
                        android:id="@+id/editnb"
                        android:layout_width="20dp"
                        android:layout_height="48dp"
                        android:ems="7"
                        android:hint="@string/nb"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edittl"
                        android:layout_width="165dp"
                        android:layout_height="51dp"
                        android:ems="10"
                        android:hint="@string/tl"
                        android:inputType="textPersonName" />
                    <EditText
                        android:id="@+id/edittal"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:hint="@string/tal"
                        android:inputType="textPersonName" />
                </TableRow>
            </TableLayout>


            <EditText
                android:id="@+id/edital"
                android:layout_width="357dp"
                android:layout_height="51dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/al"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/editjk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/jk" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/l" />
                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:text="@string/p" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/editag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ag" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i" />
                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kr"
                        android:layout_marginLeft="120dp"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ka" />
                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hi"
                        android:layout_marginLeft="112dp"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bu" />
                    <RadioButton
                        android:id="@+id/radioButton8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ko"
                        android:layout_marginLeft="116dp"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ak" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/edittelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/telp"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/em"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/editpass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/pass2"
                android:inputType="textPersonName"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/btnKembali"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btnK"
                            android:background="@color/back"
                            android:layout_marginBottom="20dp"
                            android:layout_marginRight="60dp"/>
                        <Button
                            android:id="@+id/btnDaftar"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="end"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="36dp"
                            android:background="@color/back"
                            android:text="@string/btnD">
                        </Button>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>